--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>DNV</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <div id="map"></div>
-    <script src="https://unpkg.com/deck.gl@^8.3.0/dist.min.js"></script>
-    <script src="https://unpkg.com/@deck.gl/carto@^8.3.0/dist.min.js"></script>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6L9qpPAS-M340DzgHfIkzBWvtKy7OsRw&callback=initMap&libraries=places&v=weekly"
-      defer
-    ></script>
-    <script src="app.js"></script>
-  </body>
+    <link rel="stylesheet" href="styles.css"/>
+</head>
+<body>
+<div id="map"></div>
+<div id="tooltip"></div>
+<script src="https://unpkg.com/deck.gl@^8.3.0/dist.min.js"></script>
+<script src="https://unpkg.com/@deck.gl/carto@^8.3.0/dist.min.js"></script>
+<script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6L9qpPAS-M340DzgHfIkzBWvtKy7OsRw&callback=initMap&libraries=places&v=weekly"
+        defer
+></script>
+<script src="app.js"></script>
+</body>
 </html>
